# repo-for-learning

./: .gitignore  .pre-commit-config.yaml  20.txt  README.md  repo-for-learning.code-workspace.dist  update-refs.rst
islam/quran_scrap_better/quran_scrap_better/: items.py  middlewares.py  pyproject.toml  settings.py
islam/quran_scrap_better/quran_scrap_better/spiders/: quotes.py  quran.py
systems/programming/python_django/: Forms-vault.md  README.md  pyproject.toml
systems/programming/python_django/Django-Documentation/: README.md  URL-dispatcher.md
systems/programming/python_django/Django—Documentation/: README.md  URL-dispatcher.md
systems/programming/python_django/_by/: README.md
systems/programming/python_django/_by_code/: Model.get_absolute_url.md  README.md  redirect.md  reverse.md
systems/programming/python_django/_comprehensive_files/: README.md  how-object-validation-really-work-on-Django.md  how-to-Q-objects.md
systems/programming/python_django/_etc/: Django_Developers_Survey_2023.md
systems/programming/python_django/_tidbits/: How_Instagram_Were_Made.md  check_if_OneToOneField_relation_exists.md  login_required_decorator.md  null_vs_blank.md  primary-key_=_unique-and-null-False.md  scaling-django.md  underhood-series_manager-response-empty-queryset.md  update_fields.md
systems/programming/python_django/django+htmx/: README.md
systems/programming/python_django/django-cotton/: README.md
systems/programming/python_django/django-crispy-forms/: tidbit_rendering-several-forms.md
systems/programming/python_qt-for-python/: pyproject.toml
(+658 files in other folders)
