[tool.poetry]
name = "quran-scrap-better"
version = "0.1.0"
description = ""
authors = ["Iqbal Syifa Mahmuda <bal.mahmuda@gmail.com>"]
readme = "README.md"
packages = [{include = "quran_scrap_better"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
