[tool.poetry]
name = "django-learn"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "django_learn"}]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.3"
django-extensions = "^3.2.3"
django-widget-tweaks = "^1.4.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
